Fixed random scrollbars (hopefully)

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
- background-size: corver;
+ background-size: cover;
  height: 100%;
  width: 100%;
  top: 0%;
